--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,23 +1,24 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "Build Project",
-            "type": "shell",
-            "command": "make -C gol-bluepill-12864-src",
-            "problemMatcher": [],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
-        },
-        {
-            "label": "st-flash the bin",
-            "type": "shell",
-            "command": "st-flash --reset write gol-bluepill-12864-src/gol-bluepill-12864.bin 0x8000000",
-            "problemMatcher": []
-        }
-    ]
+  // See https://go.microsoft.com/fwlink/?LinkId=733558
+  // for the documentation about the tasks.json format
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "Build Project",
+      "type": "shell",
+      "command": "make -C gol-bluepill-12864-src && arm-none-eabi-size gol-bluepill-12864-src/gol-bluepill-12864.elf",
+      "problemMatcher": [],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    },
+    {
+      "label": "st-flash the bin",
+      "type": "shell",
+      "command": "st-flash --reset write gol-bluepill-12864-src/gol-bluepill-12864.bin 0x8000000",
+      "problemMatcher": []
+    }
+  ],
+  "echoCommand": true
 }
